--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  zoom: 85%;
 }
 
 .header {
@@ -14,6 +15,8 @@ body {
   display: flex;
   justify-content: center;
 }
+
+
 
 ul {
   display:grid;
@@ -32,8 +35,12 @@ ul {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  background-color: orange;
+  background-color: #e9800a;
   border-radius: 25px;
+  font-weight: bold;
+  font-size: 1.2em;
+  color: #0e0603;
+  box-shadow: 0px 10px 13px -7px #313131;
 }
 
 .card img {
