--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,22 @@ body {
 }
 
 .header {
-  padding: 2rem;
-  font-size: 2.5em;
+  padding: 4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.scoreboard {
+  font-size: 1.3em;
+}
+
+#gamename {
+  font-size: 3em;
   font-weight: 400;
 }
 
-#cards{
+#cards {
   display: flex;
   justify-content: center;
 }
@@ -19,9 +29,9 @@ body {
 
 
 ul {
-  display:grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-template-rows: repeat(3,1fr);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   column-gap: 0.0001rem;
   column-gap: 1rem;
   row-gap: 1rem;
@@ -46,7 +56,7 @@ ul {
 .card img {
   width: 175px;
   height: 175px;
-  float:left;
+  float: left;
   object-fit: cover;
   border-radius: 25px;
 }
